LIST OF CHANGES
---------------

 - GitHub CI - updated deprecated v2 runner action to v3
 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes,
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expected checksum value, which corresponds to the latest release.

release 6.33.0 (2024-08-30)
 - Study class updated following the addition of the
   contaminated_human_data_access_group column to the study table.

release 6.32.0 (2024-07-25)
 - add seq_product_irods_locations relationship to IseqProductMetric

release 6.31.1
 - Minor changes to the pac_bio_product_metrics table

release 6.31.0
 - Additional columns added to the iseq_product_metrics table to support
   BGE library metrics reporting.
 - Add columns to pac_bio_product_metrics to store tag level yield
   related metrics and bring other tables up to date

release 6.30.0
 - To help with detecting recent changes, add `last_changed` column
   to PacBio NPG tables and update relevant DBIx classes.
 - Updated DBIx classes from the prod database schema. Two types of changes:
      1. due to a aserver upgrade tp MySQL v.8+
      2. due to database schema changes.

release 6.29.1
 - Switch to Perlbrew to obtain multiple Perl versions

release 6.29.0
 - Add plate_number column to the pac_bio_run_well_metrics table and bring
   DBIx classes up to date.

release 6.28.0
 - Add get_tags methods to pac_bio_run and pac_bio_product_metrics table
   bindings
 - Add 3 columns to the pac_bio_run_well_metrics to store well level
   demultiplexing information.

release 6.27.0
 - Add column to the pac_bio_run_well_metrics to store the ccs dataset
   id for a sample well.
